--- a/demo-app/values.yaml
+++ b/demo-app/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: truonglm/demo-gitlabci
+  repository: cuongnnb/tetris-game
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "1.0"
